[gd_scene load_steps=2 format=3 uid="uid://bys2riukaaex7"]

[ext_resource type="Script" path="res://scripts/MainGame.gd" id="1_n5qd7"]

[node name="QuestionsMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5qd7")
questions = ["a", "v", "gas"]
colors = [Color(1, 0.396078, 0.329412, 1), Color(1, 0.647059, 0, 1), Color(1, 1, 0, 1), Color(0.4, 0.988235, 0.0784314, 1), Color(0.117647, 0.564706, 1, 1), Color(0.576471, 0.439216, 0.858824, 1), Color(1, 0.411765, 0.705882, 1)]

[node name="QuestionBox" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 136.0
offset_right = -192.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="QuestionLabel" type="Label" parent="QuestionBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 35
text = "sample question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackgroundColor" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 1)
